修改了文字显示及显示颜色

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>系统首页</title>
+  <title>首页</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="home-page">
@@ -16,9 +16,8 @@
   <!-- 内容区 -->
   <div class="home-content">
     <h1>系统首页</h1>
-    <p>这是登录后的核心展示页面，可根据需求替换为仪表盘、数据统计、功能菜单等内容。</p>
-    <p>真实项目中，这里可以加载用户的个性化数据、权限对应的功能模块等。</p>
-  </div>
+    <p>待开发。。。</p>
+
 
   <!-- 引入逻辑脚本 -->
   <script src="script.js"></script>
