--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <form id="loginForm" class="login-form">
       <!-- 用户名输入框 -->
       <div class="form-item">
-        <label for="username">用户名：</label>
+        <label for="username">账号名称：</label>
         <input type="text" id="username" placeholder="请输入用户名" required>
       </div>
       <!-- 密码输入框 -->
@@ -27,7 +27,7 @@
       <!-- 错误提示（默认隐藏） -->
       <div class="error-tip" id="errorTip"></div>
       <!-- 登录按钮 -->
-      <button type="submit" class="login-btn">登录</button>
+      <button type="submit" class="login-btn">点击登录</button>
     </form>
   </div>
 
